añadi la nueva entidad DetalleProductoModeloAeronave